--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
                                     android:layout_marginTop="16dp"
                                     android:layout_marginEnd="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:src="@mipmap/wisata"
+                                    android:src="@mipmap/logoWisata"
                                     android:clickable="true"
                                     app:layout_constraintBottom_toTopOf="@+id/text_Wisata"
                                     app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +112,7 @@
                                     android:layout_marginTop="16dp"
                                     android:layout_marginEnd="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:src="@mipmap/wisata"
+                                    android:src="@mipmap/logoKuliner"
                                     app:layout_constraintBottom_toTopOf="@+id/text_kuliner"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +155,7 @@
                                     android:layout_marginTop="16dp"
                                     android:layout_marginEnd="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:src="@mipmap/wisata"
+                                    android:src="@mipmap/logoOleh"
                                     app:layout_constraintBottom_toTopOf="@+id/text_Oleh"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -191,7 +191,7 @@
                                     android:layout_marginTop="16dp"
                                     android:layout_marginEnd="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:src="@mipmap/wisata"
+                                    android:src="@mipmap/logobuus"
                                     app:layout_constraintBottom_toTopOf="@+id/text_halte"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -210,6 +210,84 @@
                                     app:layout_constraintEnd_toEndOf="@+id/image_halte"
                                     app:layout_constraintStart_toStartOf="@+id/image_halte"
                                     app:layout_constraintTop_toBottomOf="@+id/image_halte" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/background_button">
+
+                                <ImageView
+                                    android:id="@+id/image_Mushola"
+                                    android:layout_width="70dp"
+                                    android:layout_height="70dp"
+                                    android:layout_marginStart="8dp"
+                                    android:layout_marginTop="16dp"
+                                    android:layout_marginEnd="8dp"
+                                    android:layout_marginBottom="8dp"
+                                    android:src="@mipmap/logoMosque"
+                                    app:layout_constraintBottom_toTopOf="@+id/text_Mushola"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                                <TextView
+                                    android:id="@+id/text_Mushola"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="8dp"
+                                    android:layout_marginBottom="8dp"
+                                    android:text="Mushola"
+                                    android:textColor="#6200ee"
+                                    android:textSize="18sp"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="@+id/image_Mushola"
+                                    app:layout_constraintStart_toStartOf="@+id/image_Mushola"
+                                    app:layout_constraintTop_toBottomOf="@+id/image_Mushola" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/background_button">
+
+                                <ImageView
+                                    android:id="@+id/image_Campus"
+                                    android:layout_width="70dp"
+                                    android:layout_height="70dp"
+                                    android:layout_marginStart="8dp"
+                                    android:layout_marginTop="16dp"
+                                    android:layout_marginEnd="8dp"
+                                    android:layout_marginBottom="8dp"
+                                    android:src="@mipmap/logoCampus"
+                                    app:layout_constraintBottom_toTopOf="@+id/text_Campus"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                                <TextView
+                                    android:id="@+id/text_Campus"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="8dp"
+                                    android:layout_marginBottom="8dp"
+                                    android:text="Kampus"
+                                    android:textColor="#6200ee"
+                                    android:textSize="18sp"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="@+id/image_Campus"
+                                    app:layout_constraintStart_toStartOf="@+id/image_Campus"
+                                    app:layout_constraintTop_toBottomOf="@+id/image_Campus" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
 
