--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:background="@color/white"
         app:cardCornerRadius="20dp">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,7 +27,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:backgroundTint="@color/black"
-                android:text="Login"
+                android:text="LOGIN"
+                android:textAlignment="center"
+                android:textColor="@color/teal_700"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/black"
+                android:text="JOGJAKU"
                 android:textAlignment="center"
                 android:textColor="@color/teal_700"
                 android:textSize="24sp"
@@ -46,14 +57,6 @@
                 android:hint="Password"
                 android:inputType="textPassword" />
 
-            <TextView
-                android:id="@+id/forgot_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:backgroundTint="@color/black"
-                android:text="Forgot Password?"
-                android:textAlignment="textEnd" />
 
             <Button
                 android:id="@+id/btn_login"
@@ -68,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/black"
-                android:text="New User?"
+                android:text="Pengguna Baru?"
                 android:textAlignment="center" />
 
             <TextView
