--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,6 +46,13 @@
                 android:hint="Password"
                 android:inputType="textPassword" />
 
+            <EditText
+                android:id="@+id/edt_conf_password_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Ulangi Password"
+                android:inputType="textPassword" />
+
             <Button
                 android:id="@+id/btn_register"
                 android:layout_width="match_parent"
@@ -59,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/black"
-                android:text="Already Have Account?"
+                android:text="Sudah Punya Akun?"
                 android:textAlignment="center" />
 
             <TextView
