Commit Project PMOB

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
                                     android:layout_marginTop="16dp"
                                     android:layout_marginEnd="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:src="@mipmap/logoWisata"
+                                    android:src="@mipmap/logo_wisata"
                                     android:clickable="true"
                                     app:layout_constraintBottom_toTopOf="@+id/text_Wisata"
                                     app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +112,7 @@
                                     android:layout_marginTop="16dp"
                                     android:layout_marginEnd="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:src="@mipmap/logoKuliner"
+                                    android:src="@mipmap/logo_kuliner"
                                     app:layout_constraintBottom_toTopOf="@+id/text_kuliner"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +155,7 @@
                                     android:layout_marginTop="16dp"
                                     android:layout_marginEnd="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:src="@mipmap/logoOleh"
+                                    android:src="@mipmap/logo_oleh_oleh"
                                     app:layout_constraintBottom_toTopOf="@+id/text_Oleh"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +167,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:text="oleh Oleh"
+                                    android:text="Oleh Oleh"
                                     android:textColor="#6200ee"
                                     android:textSize="18sp"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -233,7 +233,7 @@
                                     android:layout_marginTop="16dp"
                                     android:layout_marginEnd="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:src="@mipmap/logoMosque"
+                                    android:src="@mipmap/logomasjid"
                                     app:layout_constraintBottom_toTopOf="@+id/text_Mushola"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -269,7 +269,7 @@
                                     android:layout_marginTop="16dp"
                                     android:layout_marginEnd="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:src="@mipmap/logoCampus"
+                                    android:src="@mipmap/logo_campus"
                                     app:layout_constraintBottom_toTopOf="@+id/text_Campus"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
