--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -245,7 +245,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="8dp"
                                     android:layout_marginBottom="8dp"
-                                    android:text="Mushola"
+                                    android:text="Masjid"
                                     android:textColor="#6200ee"
                                     android:textSize="18sp"
                                     app:layout_constraintBottom_toBottomOf="parent"
